Playable v26: per-channel Android build stamp (the v25 install loop) + Chronicle lookups via FModel.getMagicDb() (the order-dependent CI failure); CLAUDE.md, map, worklist, devlog.
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>